# youtube-music-scrobbler

./: .gitignore  .markdownlint.yml  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  last_snapshot.json  pyproject.toml  scrobble.py  verify.py
.github/: pull_request_template.md
.github/workflows/: linting.yml  scrobble.yaml  scrobble.yml  security.yml  unit-tests.yml
src/scrobble/: auth.py  lastfm_client.py  main.py  snapshot_manager.py  types.py
src/scrobble/yt_music/: artist_as_label_filter.py  artist_filter.py  youtube_music_client.py
tests/: test_auth.py
