[project]
name = "skribidi-scrobbler"
version = "0.1.0"
description = "Automatically scrobbles your YouTube Music listening history to Last.fm"
requires-python = ">=3.14"
dependencies = [
  "pylast==7.1.0",
  "ytmusicapi==1.12.1",
]

[project.scripts]
scrobble = "scrobble.main:main"
refresh-auth = "scrobble.auth:main"

[tool.uv]
required-version = ">=0.11.28"
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scrobble"]
