[project]
name = "skribidi-scrobbler"
version = "0.1.0"
description = "Automatically scrobbles your YouTube Music listening history to Last.fm"
requires-python = ">=3.14"
dependencies = [
  "pylast==7.1.0",
  "ytmusicapi==1.12.1",
]

[project.scripts]
scrobble = "scrobble.main:main"
refresh-auth = "scrobble.auth:main"

[dependency-groups]
dev = [
  "pytest>=9.1.1",
  "ruff>=0.15.22",
]

[tool.uv]
required-version = ">=0.11.28"
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scrobble"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
